tests/negative/neg_pr115_missing_declaration_semicolon.safe
package neg_pr115_missing_declaration_semicolon

   value : integer = 0 other : integer = 1

   function broken returns integer
      return value
